# LoopBuilder

./: .gitignore  README.md  env.yml  pyproject.toml
sandbox/: README.md  explore.ipynb
sandbox/PDBFixer/: 3idp_fixed_api_1.cif  3idp_fixed_api_2.cif  3idp_fixed_api_3.cif  3idp_fixed_api_4.cif  3idp_fixed_gui_1.cif
src/loopbuilder/: build.py  convert.py  score.py  segment.py  typing.py
test.py/: conftest.py  test_convert.py
